feat: 完成变更闭环管道核心模块开发与多场景优化
此提交完成了LegacyGraph系统的变更闭环管道（增强版2）核心功能开发，同时完成多项体验与稳定性优化：
1. 新增变更任务、补丁、PR任务、验证门禁等实体与数据库映射
2. 新增图谱问答、AI Agent、变更任务API与前端页面
3. 重构数据库连接、JWT处理、代码解析逻辑，修复多线程竞态问题
4. 优化前端请求拦截、测试运行功能与字典缓存加载
5. 更新文档与配置文件，升级依赖版本
6. 新增补丁计划生成Agent与相关测试用例